--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -54,7 +54,9 @@
 
 @content = {
     @contentBlock
-    @hmrcReportTechnicalIssueHelper()
+    <div class="govuk-!-margin-top-3">
+        @hmrcReportTechnicalIssueHelper()
+    </div>
 }
 
 @hmrcStandardPage(HmrcStandardPageParams(
