--- a/app/views/SetupDirectDebitPaymentView.scala.html
+++ b/app/views/SetupDirectDebitPaymentView.scala.html
@@ -30,7 +30,7 @@
 @layout(pageTitle = titleNoForm(messages("setupDirectDebitPayment.title")), showBackLink = if(directDebitCount != 0) { true } else { false }) {
 
     @h1("setupDirectDebitPayment.heading")
-    @p("setupDirectDebitPayment.p1", true)
+    @p("setupDirectDebitPayment.p1", true, extraClasses = "text-turquoise")
 
     @bulletList(
         items = Seq(
@@ -41,7 +41,7 @@
         )
     )
 
-    @p("setupDirectDebitPayment.p2", true)
+    @p("setupDirectDebitPayment.p2", true, extraClasses = "text-turquoise")
     @bulletList(
         items = Seq(
             "setupDirectDebitPayment.l21",
@@ -49,7 +49,7 @@
         )
     )
 
-    @p("setupDirectDebitPayment.p3", true)
+    @p("setupDirectDebitPayment.p3", true, extraClasses = "text-turquoise")
     @bulletList(
         items = Seq(
             "setupDirectDebitPayment.l31",
@@ -60,7 +60,7 @@
 
     @p("setupDirectDebitPayment.p4")
     
-    @p("setupDirectDebitPayment.p5", true)
+    @p("setupDirectDebitPayment.p5", true, extraClasses = "text-turquoise")
 
     @bulletList(
         items = Seq("setupDirectDebitPayment.l51")
