--- a/app/views/SetupDirectDebitPaymentView.scala.html
+++ b/app/views/SetupDirectDebitPaymentView.scala.html
@@ -18,8 +18,8 @@
 @import views.html.components._
 
 @this(
-    h1: h1,
-    p: p,
+    header1: Header1,
+    paragraph: Paragraph,
     layout: templates.Layout,
     govukButton: GovukButton,
     bulletList: BulletList
@@ -29,8 +29,8 @@
 
 @layout(pageTitle = titleNoForm(messages("setupDirectDebitPayment.title")), showBackLink = if(directDebitCount != 0) { true } else { false }) {
 
-    @h1("setupDirectDebitPayment.heading")
-    @p("setupDirectDebitPayment.p1", true, extraClasses = "text-turquoise")
+    @header1("setupDirectDebitPayment.heading")
+    @paragraph("setupDirectDebitPayment.p1", true, extraClasses = "text-turquoise")
 
     @bulletList(
         items = Seq(
@@ -41,7 +41,7 @@
         )
     )
 
-    @p("setupDirectDebitPayment.p2", true, extraClasses = "text-turquoise")
+    @paragraph("setupDirectDebitPayment.p2", true, extraClasses = "text-turquoise")
     @bulletList(
         items = Seq(
             "setupDirectDebitPayment.l21",
@@ -49,7 +49,7 @@
         )
     )
 
-    @p("setupDirectDebitPayment.p3", true, extraClasses = "text-turquoise")
+    @paragraph("setupDirectDebitPayment.p3", true, extraClasses = "text-turquoise")
     @bulletList(
         items = Seq(
             "setupDirectDebitPayment.l31",
@@ -58,29 +58,29 @@
         )
     )
 
-    @p("setupDirectDebitPayment.p4")
+    @paragraph("setupDirectDebitPayment.p4")
     
-    @p("setupDirectDebitPayment.p5", true, extraClasses = "text-turquoise")
+    @paragraph("setupDirectDebitPayment.p5", true, extraClasses = "text-turquoise")
 
     @bulletList(
         items = Seq("setupDirectDebitPayment.l51")
     )
 
-    @p("setupDirectDebitPayment.p6")
+    @paragraph("setupDirectDebitPayment.p6")
     
     <p class="govuk-body">@messages("setupDirectDebitPayment.p7")
         <a class="govuk-link govuk-link--no-visited-state" href="http://www.hmrc.gov.uk/payinghmrc/">@messages("setupDirectDebitPayment.link1")</a>
     </p>
 
-     @p("setupDirectDebitPayment.p8")
+     @paragraph("setupDirectDebitPayment.p8")
 
     <p class="govuk-body">
         <strong>@messages("setupDirectDebitPayment.p9")</strong> 
         @messages("setupDirectDebitPayment.p91")
     </p>
     
-     @p("setupDirectDebitPayment.p10")
-     @p("setupDirectDebitPayment.p11")
+     @paragraph("setupDirectDebitPayment.p10")
+     @paragraph("setupDirectDebitPayment.p11")
 
     @govukButton(Button(
         href = Some(routes.PersonalOrBusinessAccountController.onPageLoad(NormalMode).url),
