--- a/app/views/components/Header1.scala.html
+++ b/app/views/components/Header1.scala.html
@@ -14,14 +14,14 @@
  * limitations under the License.
  *@
 
- @import utils.Utils.emptyString
+@import utils.Utils.emptyString
 
 @this()
 
 @(
   msg: String,
-  id: Option[String] = None,
-  classes: String = "govuk-heading-l"
+  classes: String = "govuk-heading-l",
+  id: Option[String] = None
 )(implicit messages: Messages)
 
-<h1 @{id.fold(emptyString)(id => s"id=$id")} class="@classes">@messages(msg)</h1>
+<h1 @{id.fold(emptyString)(id => s"id=$id")} class="@classes">@messages(msg)</h1> 
