[DTR-49] Created Re-usable Components  (#17)
* [DTR-49] Adding re-usable components

* [DTR-49] Width adjustments

* [DTR-49] Adding EOL

* [DTR-49] Applying emptyString

* [DTR-49] AddedLinkWithHiddenText

* [DTR-49] Updating org.playframework:sbt-plugin

* [DTR-49] Adding EOL to link

* [DTR-49] Adding unit tests

* [DTR-49] Some tidy up

* [DTR-49] Adding text colour classes

* [DTR-49] Updating PR comments

* [DTR-49] Adding EOL

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,20 @@
 .js-enabled .js-visible {
   display: inline-block !important;
 }
+
+.govuk-link--disabled {
+  pointer-events: none;
+  color: #6a6a6a;
+  text-decoration: none;
+}
+
+.govuk-table {
+  &__header,
+  &__cell {
+    border: 0;
+  }
+}
+
+.text-turquoise {
+  color: #28a197;
+}
