--- a/app/views/PlanStartDateView.scala.html
+++ b/app/views/PlanStartDateView.scala.html
@@ -17,10 +17,11 @@
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
-    govukErrorSummary: GovukErrorSummary,
+    mainErrorSummary: components.MainErrorSummary,
     govukDateInput: GovukDateInput,
     govukButton: GovukButton
 )
+
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
@@ -28,9 +29,7 @@
 
     @formHelper(action = routes.PlanStartDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
-        @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value.day")))
-        }
+        @mainErrorSummary(form)
 
         @govukDateInput(
             DateViewModel(
