--- a/app/views/CheckYourAnswersView.scala.html
+++ b/app/views/CheckYourAnswersView.scala.html
@@ -14,19 +14,37 @@
  * limitations under the License.
  *@
 
+@import views.html.components._
+
 @this(
+    header1: Header1,
+    h2:Header2,
+    h3:Header3,
+    paragraph: Paragraph,
+    paragraphDate: ParagraphDate,
     layout: templates.Layout,
     govukSummaryList: GovukSummaryList,
     govukButton: GovukButton
 )
 
-@(list: SummaryList)(implicit request: Request[_], messages: Messages)
+@(list: SummaryList, currentDate: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("checkYourAnswers.title"))) {
 
-    <h1 class="govuk-heading-xl">@messages("checkYourAnswers.heading")</h1>
 
-    @govukSummaryList(list)
+        @header1("checkYourAnswers.heading")
+        @h2("checkYourAnswers.h2")
+        @govukSummaryList(list)
+        @paragraph("checkYourAnswers.p1")
+        @h3("checkYourAnswers.h3")
+        @paragraph("checkYourAnswers.p2")
+        @paragraph("checkYourAnswers.p3")
+        @paragraph("checkYourAnswers.p4")
+        @paragraph("checkYourAnswers.p5")
+        @paragraph("checkYourAnswers.p6")
+        @paragraphDate("checkYourAnswers.p7", currentDate)
+
+
 
     @govukButton(
         ButtonViewModel(messages("checkYourAnswers.acceptAndContinue"))
