--- a/app/views/PaymentPlanTypeView.scala.html
+++ b/app/views/PaymentPlanTypeView.scala.html
@@ -14,6 +14,8 @@
  * limitations under the License.
  *@
 
+@import models.DirectDebitSource.*
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
@@ -22,7 +24,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, selectedAnswer: Option[DirectDebitSource])(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("paymentPlanType.title"))) {
 
@@ -36,7 +38,7 @@
             RadiosViewModel(
                 field  = form("value"),
                 legend = LegendViewModel(messages("paymentPlanType.heading")).asPageHeading(),
-                items  = PaymentPlanType.options
+                items  = if (selectedAnswer == Some(MGD)) { PaymentPlanType.options1 } else if (selectedAnswer == Some(SA)) { PaymentPlanType.options2 } else { PaymentPlanType.options3 }
             )
         )
 
