--- a/app/views/PaymentsFrequencyView.scala.html
+++ b/app/views/PaymentsFrequencyView.scala.html
@@ -22,9 +22,9 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("paymentsFrequency.title"))) {
+@layout(pageTitle = title(form, messages("paymentsFrequency.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.PaymentsFrequencyController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
