--- a/app/views/RegularPaymentAmountView.scala.html
+++ b/app/views/RegularPaymentAmountView.scala.html
@@ -41,6 +41,7 @@
             )
             .withPrefix(PrefixOrSuffix(content = "£"))
             .withWidth(Fixed10)
+            .withHint(HintViewModel(messages("regularPaymentAmount.hint")))
         )
 
         @govukButton(
