DTR-38 add more unit tests and code cleaning

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,9 @@
 .extra-line-spacing {
   line-height: 1.4;
   margin-top: -17px;
+  margin-bottom: 2em;
 }
+
 .direct-debit-container {
   display: flex;
   justify-content: space-between;
