DTR-25 Implementated total amount due page, added tests and navigation.

--- a/app/views/TotalAmountDueView.scala.html
+++ b/app/views/TotalAmountDueView.scala.html
@@ -34,9 +34,6 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
-        <p class="govuk-body">@messages("totalAmountDue.p1")</p>
-
-
         @govukInput(
             InputViewModel(
                 field = form("value"),
@@ -44,6 +41,7 @@
             )
             .withPrefix(PrefixOrSuffix(content = "£"))
             .withWidth(Fixed10)
+            .withHint(HintViewModel(HtmlContent(messages("totalAmountDue.hint"))))
         )
 
         @govukButton(
