--- a/app/views/PlanEndDateView.scala.html
+++ b/app/views/PlanEndDateView.scala.html
@@ -32,18 +32,24 @@
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value.day")))
         }
 
-        <p class="govuk-body">@messages("planEndDate.p1")</p>
-        <p class="govuk-body">@messages("planEndDate.p2")</p>
-        <p class="govuk-body">@messages("planEndDate.p3")</p>
-
-
-        @govukDateInput(
+            @govukDateInput(
             DateViewModel(
-                field  = form("value"),
-                legend = LegendViewModel(messages("planEndDate.heading")).asPageHeading()
+            field  = form("value"),
+            legend = LegendViewModel(messages("planEndDate.heading")).asPageHeading()
+            ).withHint(
+            HintViewModel(
+            HtmlContent(
+            Seq(
+
+            s"<p >${messages("planEndDate.p1")}</p>",
+            s"<p >${messages("planEndDate.p2")}</p>",
+            s"<p>${messages("planEndDate.p3")}</p>",
+            s"<p class='govuk-!-margin-top-7'>${messages("planEndDate.hint")}</p>",
+            ).mkString
             )
-            .withHint(HintViewModel(messages("planEndDate.hint")))
-        )
+            )
+            )
+            )
 
         @govukButton(
             ButtonViewModel(messages("site.continue"))
