DTR-13  T8 - You need bank approval

--- a/app/views/BankApprovalView.scala.html
+++ b/app/views/BankApprovalView.scala.html
@@ -14,14 +14,29 @@
  * limitations under the License.
  *@
 
+@import config.FrontendAppConfig
+@import views.html.components._
+
 @this(
         layout: templates.Layout,
+        header1: Header1,
+        paragraph: Paragraph,
+        paragraphMessageWithLink: ParagraphMessageWithLink,
         govukButton: GovukButton
 )
 
-@()(implicit request: Request[_], messages: Messages)
+@()(implicit request: Request[_],appConfig: FrontendAppConfig, messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("bankApproval.title"))) {
+@layout(pageTitle = titleNoForm(messages("bankApproval.title")),showSignOut = false, showBackLink = false) {
 
     <h1 class="govuk-heading-xl">@messages("bankApproval.heading")</h1>
+         @header1("bankApproval.heading")
+         @paragraph("bankApproval.p1")
+         @paragraphMessageWithLink(
+         Some(messages("bankApproval.p2")),
+         linkMessage = messages("bankApproval.p2.link"),
+         linkUrl = appConfig.payingHmrcUrl,
+         linkFullStop = false,
+         message2 = Some(messages("bankApproval.p2.link.after"))
+         )
 }
