--- a/app/views/components/ParagraphWithParameter.scala.html
+++ b/app/views/components/ParagraphWithParameter.scala.html
@@ -1,5 +1,5 @@
-/*
- * Copyright 2025 HM Revenue & Customs
+@*
+ * Copyright 2023 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -12,20 +12,19 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package forms
+@import utils.Utils.emptyString
 
-import javax.inject.Inject
+@this()
 
-import forms.mappings.Mappings
-import play.api.data.Form
-import models.AuthorisedAccountHolder
+@(
+  message: String,
+  param: String = emptyString,
+  bold: Boolean = false,
+  extraClasses: String = emptyString
+)(implicit messages: Messages)
 
-class AuthorisedAccountHolderFormProvider @Inject() extends Mappings {
-
-  def apply(): Form[AuthorisedAccountHolder] =
-    Form(
-      "value" -> enumerable[AuthorisedAccountHolder]("authorisedAccountHolder.error.required")
-    )
-}
+<p class="govuk-body @extraClasses @if(bold){govuk-!-font-weight-bold}">
+  @{Html(messages(message, param))}
+</p>
