--- a/app/views/YourDirectDebitInstructionsView.scala.html
+++ b/app/views/YourDirectDebitInstructionsView.scala.html
@@ -29,7 +29,7 @@
     directDebitDetailsTable: DirectDebitDetailsTable
 )
 
-@(directDebitDetails: List[DirectDebitDetails], maxLimitReached: Boolean = false)(implicit request: Request[_], messages: Messages)
+@(directDebitDetails: Seq[DirectDebitDetails], maxLimitReached: Boolean = false)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("yourDirectDebitInstructions.title")), showBackLink = false) {
 
@@ -66,7 +66,7 @@
             headerRightVisuallyHiddenText = Some(messages(dd.directDebitReference)),
             rows = Seq(
                 (messages("yourDirectDebitInstructions.dl.direct.debit.reference"), dd.directDebitReference),
-                (messages("yourDirectDebitInstructions.dl.date.setup"), formatDateToGds(dd.setupDate)),
+                (messages("yourDirectDebitInstructions.dl.date.setup"), dd.setupDate),
                 (messages("yourDirectDebitInstructions.dl.sort.code"), maskSortCode(dd.sortCode)),
                 (messages("yourDirectDebitInstructions.dl.account.number"), maskAccountNumber(dd.accountNumber)),
                 (messages("yourDirectDebitInstructions.dl.payment.plans"), dd.paymentPlans)
