DTR-114: Bug fix for navigation, error validation, remove backlink from DD confirmation

--- a/app/views/DirectDebitConfirmationView.scala.html
+++ b/app/views/DirectDebitConfirmationView.scala.html
@@ -28,7 +28,7 @@
 
 @(referenceNumber: String, serviceNumber: String)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("directDebitConfirmation.title"))) {
+@layout(pageTitle = titleNoForm(messages("directDebitConfirmation.title")), showBackLink = false) {
 
     
     @paragraph(messages("directDebitConfirmation.successMessage"))
