--- a/app/views/PaymentDateView.scala.html
+++ b/app/views/PaymentDateView.scala.html
@@ -15,7 +15,6 @@
  *@
 
 @import views.html.components._
-@import viewmodels.PaymentDateViewModel
 
 @this(
     layout: templates.Layout,
@@ -25,11 +24,11 @@
     govukButton: GovukButton,
 )
 
-@(form: Form[_], paymentDateViewModel: PaymentDateViewModel)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, earliestPaymentDate: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("paymentDate.title"))) {
 
-    @formHelper(action = routes.PaymentDateController.onSubmit(paymentDateViewModel.mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.PaymentDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value.day")))
@@ -40,7 +39,7 @@
                 field  = form("value"),
                 legend = LegendViewModel(messages("paymentDate.heading")).asPageHeading()
             )
-            .withHint(HintViewModel(HtmlContent(messages("paymentDate.hint", paymentDateViewModel.earliestPaymentDate, paymentDateViewModel.earliestPaymentDate))))
+            .withHint(HintViewModel(HtmlContent(messages("paymentDate.hint", earliestPaymentDate, earliestPaymentDate))))
         )
 
         @govukButton(
